--- a/templates/index.html
+++ b/templates/index.html
@@ -75,6 +75,19 @@
               return true;
           }
 
+          function getLocation() {
+              if (navigator.geolocation) {
+                  navigator.geolocation.getCurrentPosition(showPosition);
+              } else { 
+                  alert("Geolocation is not supported by this browser.");
+              }
+          }
+
+          function showPosition(position) {
+              document.getElementById("start_loc").value = position.coords.latitude + 
+                  ", " + position.coords.longitude;	
+          }
+
 
     </script>
 
@@ -95,7 +108,7 @@
                 <div class="Route-entry" style="width:35%">
                     <label for="start_loc"><h3>Start Address</h3></label>
                     <br/>
-                    <button type="button" class="btn btn-warning" style="float:left; height:35px; margin-left:-50px;"><span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span></button>
+                    <button type="button" class="btn btn-warning" onClick="getLocation()" style="float:left; height:35px; margin-left:-50px;"><span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span></button>
                     <input type="text" class="form-control" id="start_loc" size="50" maxlength="50" style="float:right; width:100%;" placeholder="Starting Location">
                 </div>
                 <div class="Route-entry" style="width:35%; margin-top:55px;">
