Renamed the project!

--- a/templates/index.html
+++ b/templates/index.html
@@ -571,7 +571,7 @@
         <div class="section" id="section0">
             <div class="intro">
                 <img height="200" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Sinnbild_Radfahrer.svg/500px-Sinnbild_Radfahrer.svg.png"  alt="1"/>
-                <h1>Plan My Ride</h1>
+                <h1><strike>PIMP</strike> Plan My Ride</h1>
                 <h2>Quickly track and view your cycling route</h2>
             </div>
         </div>
