added arrow img

--- a/templates/index.html
+++ b/templates/index.html
@@ -582,6 +582,7 @@
                 <img height="200" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Sinnbild_Radfahrer.svg/500px-Sinnbild_Radfahrer.svg.png"  alt="1"/>
                 <h1><strike>PIMP</strike> Plan My Ride</h1>
                 <h2>Quickly track and view your cycling route</h2>
+                <img src="http://www.clipartbest.com/cliparts/yio/ekq/yioekqdyT.png" height="100" style="margin-top: 100px;" />
             </div>
         </div>
 
