--- a/templates/index.html
+++ b/templates/index.html
@@ -506,6 +506,11 @@
               // alert("lat: " + latp + " lng: " + lngp);
 
               map = new google.maps.Map(document.getElementById('map'), {
+                  scrollwheel: false,
+                  navigationControl: false,
+                  mapTypeControl: false,
+                  scaleControl: false,
+                  draggable: false,
                   center: pos,
                   zoom: 13,
                   mapTypeId: google.maps.MapTypeId.HYBRID,
