--- a/templates/index.html
+++ b/templates/index.html
@@ -621,11 +621,11 @@
 
             <div class="slide" id="slide2" data-anchor="slide2">
                 <h2>Low Quality</h2>
-                <p>This setting returns less geolocation and image and is so recomended with a slow network connection.</p>
+                <p>This setting returns less geolocation and image data and is therefore recomended when limited with a slow network connection.</p>
                 <p>Use this for requesting approximate data on a large route.</p>
 
                 <h2>High Quality</h2>
-                <p>This setting delivers more accurate geolocation and image data and relies on a strong network connection</p>
+                <p>This setting delivers more accurate geolocation and image data and relies on access to a strong network connection.</p>
                 <p>Use this for requesting accurate data on a short route.</p>
             </div>
 
